# sip_cmake

./: README.md
boost_python3/: CMakeLists.txt  builtin_converters.cpp.patch
pyqt5/: CMakeLists.txt  colcon.pkg
pyside2/: CMakeLists.txt
sip/: CMakeLists.txt
